# dotfiles

./: .gitattributes  .gitignore  LICENSE.md  README.md  cinnamon-keybindings.conf
JetBrains/CLion/: installed.txt
JetBrains/CLion/options/: advancedSettings.xml  filetypes.xml  find.xml  ide.general.xml  nodejs.xml  updates.xml  web-types-npm-loader.xml  window.state.xml
JetBrains/WebStorm/: installed.txt
JetBrains/WebStorm/options/: editor.xml  filetypes.xml  find.xml  ide.general.xml  spellchecker-dictionary.xml  trusted-paths.xml  updates.xml  web-types-npm-loader.xml  window.state.xml
github/: dependabot.yml  labeler.yml
github/workflows/: deploy-doxygen-documentation.yml  deploy-rust-documentation.yml  gitleaks.toml  gitleaks.yml  labeler.yml
scripts/: find_20_biggest_files.sh
scripts/linux/: find_20_biggest_files.sh  install-doxygen.sh
templates/C_CPP/: .clang-format  .clang-tidy
templates/cmake/: CMakeLists.txt
templates/cmake/documentation/.doxygen/: Doxyfile  header.html
templates/cmake/modules/: ClangFormat.cmake  ClangTidy.cmake  CompileOptions.cmake  CopyAssets.cmake  MakeDoc.cmake  MakeShaders.cmake  PathsAndOptions.cmake
templates/rust/: rustfmt.toml
templates/tools/: build.sh  install-dependencies.sh
zsh/: .zshrc
zsh/themes/: mytheme.zsh-theme
